k8s/overlays/coretech-1/cardano-book/deployment.cardano-book-staging.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cardano-book-staging
  namespace: cardano-book
spec:
  template:
    spec:
      tolerations:
      - effect: NoSchedule
        key: spot
        operator: Equal
        value: "true"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: capacity-type
                operator: In
                values:
                - spot
