k8s/overlays/coretech-1/cardano-book/httpRoute.cardano-book-production.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cardano-book-production
  namespace: cardano-book
spec:
  hostnames:
  - book.k8s.iog.io
