k8s/overlays/coretech-1/cardano-book/httpRoute.cardano-book-redirect.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cardano-book-redirect
  namespace: cardano-book
spec:
  hostnames:
  - book.k8s.iog.io
  - book-staging.k8s.iog.io
